Optimised for tablet display.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Controllers.Activities.Fragments.MainActivity"
+            android:name=".Controllers.Activities.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar"
             >
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
-
-
         </activity>
+        <activity android:name=".Controllers.Activities.DetailActivity"/>
     </application>
 
 </manifest>
